--- a/src/app/shared/lista-produtos/lista-produtos.component.css
+++ b/src/app/shared/lista-produtos/lista-produtos.component.css
@@ -30,7 +30,8 @@ hr{
     margin-bottom: 30px;
 }
 .card-produtos img{
-    max-width: 128px;
+    max-width: 100%;
+    max-height: 115px;
     display: inline-block;
     padding-bottom: 30px;
 }
@@ -48,6 +49,13 @@ hr{
     border-radius: 10px;
 }
 
+.flex{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 @media screen and (max-width:866px) {
     .card-produtos {
             width: 48%;
@@ -57,5 +65,11 @@ hr{
 @media screen and (max-width:563px) {
     .card-produtos {
         width: 100%;
+    }
+}
+
+@media screen and (max-width:400px) {
+    .flex h1{
+        font-size: 22px;
     }
 }
