--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,2 +1,5 @@
 <app-header></app-header>
 <lista-produtos></lista-produtos>
+<footer>
+    <h2>Feito por <a href="https://portifoliorafa.vercel.app">Rafael Melo</a></h2>
+</footer>
