--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -33,6 +33,7 @@ input-busca{
     display: flex;
     position: relative;
     width: 45px;
+    cursor: pointer;
 }
 .carrinhoCompras h1{
     color: white;
