--- a/src/app/shared/lista-produtos/lista-produtos.component.html
+++ b/src/app/shared/lista-produtos/lista-produtos.component.html
@@ -10,7 +10,7 @@
                     <hr>
                 <h2>{{card.nomeProduto}}</h2>
                 <h2>{{card.precoProduto | currency:'R$ ':'symbol':'1.2-2'}}</h2>
-                <button class="btn-card" (click)="addCarrinho(card.id)">Comprar</button>
+                <button class="btn-card" (click)="addCarrinho(card)">Comprar</button>
             </div>
         </div>
     </div>
